style(abnormal): fix image overflow.

--- a/src/views/abnormal/index.scss
+++ b/src/views/abnormal/index.scss
@@ -7,6 +7,7 @@
   background-color: #ffffff;
   .not-img {
     width: 60%;
+    height: 100%;
     margin-right: 120px;
   }
   .not-detail {
